fixed spacing

--- a/frontend/web/src/app/learn/learn.component.css
+++ b/frontend/web/src/app/learn/learn.component.css
@@ -16,17 +16,20 @@
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
-    
+    min-width: 20vw;
   }
   
   .article {
-    max-width: 300px;
+    /* max-width: 300px; */
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
     background-color: white;
+    width: 25vw;
+    margin-right: 10px;
+    margin-top: 35px;
   }
   
   .article:hover {
